humidity_monitor/build/log/idf_py_stdout_output_162584
[1/11] Building CXX object esp-idf/sensor_service/CMakeFiles/__idf_sensor_service.dir/src/sensor_service.cpp.obj
FAILED: esp-idf/sensor_service/CMakeFiles/__idf_sensor_service.dir/src/sensor_service.cpp.obj 
/usr/local/src/esp-idf-tools-v5.4/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32s2-elf-g++  -DESP_PLATFORM -DIDF_VER=\"v5.4\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -Iconfig -I../components/sensor_service/include -I/usr/local/src/esp-idf-v5.4/components/newlib/platform_include -I/usr/local/src/esp-idf-v5.4/components/freertos/config/include -I/usr/local/src/esp-idf-v5.4/components/freertos/config/include/freertos -I/usr/local/src/esp-idf-v5.4/components/freertos/config/xtensa/include -I/usr/local/src/esp-idf-v5.4/components/freertos/FreeRTOS-Kernel/include -I/usr/local/src/esp-idf-v5.4/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/usr/local/src/esp-idf-v5.4/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/usr/local/src/esp-idf-v5.4/components/freertos/esp_additions/include -I/usr/local/src/esp-idf-v5.4/components/esp_hw_support/include -I/usr/local/src/esp-idf-v5.4/components/esp_hw_support/include/soc -I/usr/local/src/esp-idf-v5.4/components/esp_hw_support/include/soc/esp32s2 -I/usr/local/src/esp-idf-v5.4/components/esp_hw_support/dma/include -I/usr/local/src/esp-idf-v5.4/components/esp_hw_support/ldo/include -I/usr/local/src/esp-idf-v5.4/components/esp_hw_support/debug_probe/include -I/usr/local/src/esp-idf-v5.4/components/esp_hw_support/port/esp32s2/. -I/usr/local/src/esp-idf-v5.4/components/esp_hw_support/port/esp32s2/include -I/usr/local/src/esp-idf-v5.4/components/heap/include -I/usr/local/src/esp-idf-v5.4/components/heap/tlsf -I/usr/local/src/esp-idf-v5.4/components/log/include -I/usr/local/src/esp-idf-v5.4/components/soc/include -I/usr/local/src/esp-idf-v5.4/components/soc/esp32s2 -I/usr/local/src/esp-idf-v5.4/components/soc/esp32s2/include -I/usr/local/src/esp-idf-v5.4/components/soc/esp32s2/register -I/usr/local/src/esp-idf-v5.4/components/hal/platform_port/include -I/usr/local/src/esp-idf-v5.4/components/hal/esp32s2/include -I/usr/local/src/esp-idf-v5.4/components/hal/include -I/usr/local/src/esp-idf-v5.4/components/esp_rom/include -I/usr/local/src/esp-idf-v5.4/components/esp_rom/esp32s2/include -I/usr/local/src/esp-idf-v5.4/components/esp_rom/esp32s2/include/esp32s2 -I/usr/local/src/esp-idf-v5.4/components/esp_rom/esp32s2 -I/usr/local/src/esp-idf-v5.4/components/esp_common/include -I/usr/local/src/esp-idf-v5.4/components/esp_system/include -I/usr/local/src/esp-idf-v5.4/components/esp_system/port/soc -I/usr/local/src/esp-idf-v5.4/components/esp_system/port/include/private -I/usr/local/src/esp-idf-v5.4/components/xtensa/esp32s2/include -I/usr/local/src/esp-idf-v5.4/components/xtensa/include -I/usr/local/src/esp-idf-v5.4/components/xtensa/deprecated_include -I/usr/local/src/esp-idf-v5.4/components/lwip/include -I/usr/local/src/esp-idf-v5.4/components/lwip/include/apps -I/usr/local/src/esp-idf-v5.4/components/lwip/include/apps/sntp -I/usr/local/src/esp-idf-v5.4/components/lwip/lwip/src/include -I/usr/local/src/esp-idf-v5.4/components/lwip/port/include -I/usr/local/src/esp-idf-v5.4/components/lwip/port/freertos/include -I/usr/local/src/esp-idf-v5.4/components/lwip/port/esp32xx/include -I/usr/local/src/esp-idf-v5.4/components/lwip/port/esp32xx/include/arch -I/usr/local/src/esp-idf-v5.4/components/lwip/port/esp32xx/include/sys -I/usr/local/src/esp-idf-v5.4/components/driver/deprecated -I/usr/local/src/esp-idf-v5.4/components/driver/i2c/include -I/usr/local/src/esp-idf-v5.4/components/driver/touch_sensor/include -I/usr/local/src/esp-idf-v5.4/components/driver/twai/include -I/usr/local/src/esp-idf-v5.4/components/driver/touch_sensor/esp32s2/include -I/usr/local/src/esp-idf-v5.4/components/esp_pm/include -I/usr/local/src/esp-idf-v5.4/components/esp_ringbuf/include -I/usr/local/src/esp-idf-v5.4/components/esp_driver_gpio/include -I/usr/local/src/esp-idf-v5.4/components/esp_driver_pcnt/include -I/usr/local/src/esp-idf-v5.4/components/esp_driver_gptimer/include -I/usr/local/src/esp-idf-v5.4/components/esp_driver_spi/include -I/usr/local/src/esp-idf-v5.4/components/esp_driver_mcpwm/include -I/usr/local/src/esp-idf-v5.4/components/esp_driver_ana_cmpr/include -I/usr/local/src/esp-idf-v5.4/components/esp_driver_i2s/include -I/usr/local/src/esp-idf-v5.4/components/esp_driver_sdmmc/include -I/usr/local/src/esp-idf-v5.4/components/sdmmc/include -I/usr/local/src/esp-idf-v5.4/components/esp_driver_sdspi/include -I/usr/local/src/esp-idf-v5.4/components/esp_driver_sdio/include -I/usr/local/src/esp-idf-v5.4/components/esp_driver_dac/include -I/usr/local/src/esp-idf-v5.4/components/esp_driver_rmt/include -I/usr/local/src/esp-idf-v5.4/components/esp_driver_tsens/include -I/usr/local/src/esp-idf-v5.4/components/esp_driver_sdm/include -I/usr/local/src/esp-idf-v5.4/components/esp_driver_i2c/include -I/usr/local/src/esp-idf-v5.4/components/esp_driver_uart/include -I/usr/local/src/esp-idf-v5.4/components/vfs/include -I/usr/local/src/esp-idf-v5.4/components/esp_driver_ledc/include -I/usr/local/src/esp-idf-v5.4/components/esp_driver_parlio/include -I/usr/local/src/esp-idf-v5.4/components/esp_driver_usb_serial_jtag/include -I/usr/local/src/esp-idf-v5.4/components/esp_adc/include -I/usr/local/src/esp-idf-v5.4/components/esp_adc/interface -I/usr/local/src/esp-idf-v5.4/components/esp_adc/esp32s2/include -I/usr/local/src/esp-idf-v5.4/components/esp_adc/deprecated/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy   -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/ubuntu/plants/humidity_monitor=. -fmacro-prefix-map=/usr/local/src/esp-idf-v5.4=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -fuse-cxa-atexit -MD -MT esp-idf/sensor_service/CMakeFiles/__idf_sensor_service.dir/src/sensor_service.cpp.obj -MF esp-idf/sensor_service/CMakeFiles/__idf_sensor_service.dir/src/sensor_service.cpp.obj.d -o esp-idf/sensor_service/CMakeFiles/__idf_sensor_service.dir/src/sensor_service.cpp.obj -c ../components/sensor_service/src/sensor_service.cpp
In file included from ../components/sensor_service/include/sensor_service.hpp:2,
                 from ../components/sensor_service/src/sensor_service.cpp:1:
/usr/local/src/esp-idf-v5.4/components/driver/deprecated/driver/adc.h:19:2: warning: #warning "legacy adc driver is deprecated, please migrate to use esp_adc/adc_oneshot.h and esp_adc/adc_continuous.h for oneshot mode and continuous mode drivers respectively" [-Wcpp]
   19 | #warning "legacy adc driver is deprecated, please migrate to use esp_adc/adc_oneshot.h and esp_adc/adc_continuous.h for oneshot mode and continuous mode drivers respectively"
      |  ^~~~~~~
../components/sensor_service/src/sensor_service.cpp:9:27: error: 'SensorService' has not been declared
    9 | adc_oneshot_unit_handle_t SensorService::init_sensor(adc_channel_t channel) {
      |                           ^~~~~~~~~~~~~
../components/sensor_service/src/sensor_service.cpp:27:5: error: 'SensorService' has not been declared
   27 | int SensorService::read_sensor(adc_oneshot_unit_handle_t sensor_handle, adc_channel_t channel) {
      |     ^~~~~~~~~~~~~
[2/11] Performing build step for 'bootloader'
[1/1] cd /home/ubuntu/plants/humidity_monitor/build/bootloader/esp-idf/esptool_py && /usr/local/src/esp-idf-tools-v5.4/python_env/idf5.4_py3.8_env/bin/python /usr/local/src/esp-idf-v5.4/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/ubuntu/plants/humidity_monitor/build/bootloader/bootloader.bin
Bootloader binary size 0x5520 bytes. 0x1ae0 bytes (24%) free.
ninja: build stopped: subcommand failed.
